# sequent-assistant

./: .gitignore  README.md  sequent-assistant.cabal  stack.yaml
app/: Main.hs
src/: Commands.hs  Fin.hs  Formula.hs  FromString.hs  Parser.hs  Proof.hs  Prover.hs  Rules.hs  Substitution.hs  TeX.hs  Tree.hs
src/Parser/: Base.hs  Commands.hs  Formula.hs
