name:                sequent-assistant
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/sequent-assistant#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Proof, Parser, Formula, Substitution, Tree, Rules, Fin
                     , Commands, Prover, TeX
  build-depends:       base >= 4.7 && < 5, parsec, mtl, containers, rosezipper
                     , transformers, mmorph, pretty
  default-language:    Haskell2010

executable sequent-assistant-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , sequent-assistant
  default-language:    Haskell2010

test-suite sequent-assistant-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , sequent-assistant
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/githubuser/sequent-assistant
